<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/card_bg"
    android:layout_marginBottom="16dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/cardIcon"
        android:layout_width="45dp"
        android:layout_height="47dp"
        android:src="@drawable/circle_dark"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/subject_icon_description" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/cardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mathematics_label"
            android:textColor="#4D4949"
            android:textSize="20sp"
            android:layout_marginBottom="6dp" />

        <TextView
            android:id="@+id/cardStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_marks_label"
            android:textColor="#898989"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/cardTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_10_40_am_label"
        android:textColor="#898989"
        android:textSize="14sp"
        android:layout_marginStart="8dp" />
</LinearLayout>
